# Slicer-SegTemplateEditor

./: CMakeLists.txt  LICENSE  LabelNameGenerator.s4ext  README.md  SegTemplateEditor.s4ext
LabelNameGenerator/: CMakeLists.txt  LabelNameGenerator.py  labels.json
SegTemplateEditor/: CMakeLists.txt  SegTemplateEditor.py
